--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -28,7 +28,12 @@
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     },
     "IIS": {
-      "commandName": "IIS"
+      "commandName": "IIS",
+      "launchBrowser": true,
+      "launchUrl": "http://localhost/Server",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
